first official deployment

--- a/src/components/GetInTouch/GetInTouch.css
+++ b/src/components/GetInTouch/GetInTouch.css
@@ -4,13 +4,13 @@
 
 }
 .content-card .title h2{
-    background: linear-gradient(to top, transparent 0%, rgb(0,109,164) 30%);
+    background: linear-gradient(to top, transparent 0%, var(--fist-color) 30%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     opacity: .9;
 }
 .btn:hover{
     background: #fff;
-    color: rgb(0,109,164);
-    border: 2px solid rgb(0,109,164);
+    color: var(--fist-color);
+    border: 2px solid var(--fist-color);
 }
